--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,34 @@
 </head>
 <body>
 	<header>
+		<!-- Aca va mi Título -->
 		<h1>Cifrado César</h1>
+
+		<!-- Especifica el texto en negrita  -->
 		<b>¿Qué es Cifrado César</b>
+
+		<!-- Una explicación sobre el cifrado césar -->
 		 <p> - En criptografía, el cifrado César, también conocido como cifrado por desplazamiento, código de César o desplazamiento de César, es una de las técnicas decodificación más simples y más usadas. Es un tipo de cifrado por sustitución en el que una letra en el texto original es reemplazada por otra letra que se encuentra un número fijo de posiciones más adelante en el alfabeto. Por ejemplo, con un desplazamiento de 3, la A sería sustituida por la D (situada 3 lugares a la derecha de la A ), la B sería reemplazada por la E, etc.</p>
-        <p> - El Cifrado César mueve cada letra un determinado número de espacios en el alfabeto. En este ejemplo se usa un desplazamiento de tres espacios, asi que una B en el texto original se convierte en una E en el texto codificado.</p>
-	</header>
+         <p> - El Cifrado César mueve cada letra un determinado número de espacios en el alfabeto. En este ejemplo se usa un desplazamiento de tres espacios, asi que una B en el texto original se convierte en una E en el texto codificado.</p>
+
+         <!-- Agregar una imagen  
+        
+    <p class="img"> <img src="src/img/cifrado.png"></p>
+	</header> -->
+
 	<section>
+
+		<!-- Creación de TextArea-->
 		<div class="area">
-			<textarea class="text1" placeholder="Introduzca un Texto" rows="2" cols="30"></textarea>
+			<textarea class="text1" placeholder="Introduzca un Texto" rows="2" cols="30"></textarea> 
 			<textarea class="text2" placeholder="Introduzca un Texto" rows="2" cols="30"></textarea>
+			<textarea class="text3" placeholder="Introduzca un Texto" rows="2" cols="30" ></textarea>
 		</div>
+		<button id="code"> Cifrar</button>
+		<button id="decipher">Descifrar</button>
+		<button id="reset"> Borrar</button>
 	</section>
+
   <div id="root"></div>
 
   <script src="cipher.js"></script>
