diseño de textarea y botones

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <title>Cifrado César</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-	<header>
+<body class="structure" ></body>
+	<header >
 		<!-- Aca va mi Título -->
 		<h1>Cifrado César</h1>
 
@@ -17,12 +17,13 @@
 		 <p> - En criptografía, el cifrado César, también conocido como cifrado por desplazamiento, código de César o desplazamiento de César, es una de las técnicas decodificación más simples y más usadas. Es un tipo de cifrado por sustitución en el que una letra en el texto original es reemplazada por otra letra que se encuentra un número fijo de posiciones más adelante en el alfabeto. Por ejemplo, con un desplazamiento de 3, la A sería sustituida por la D (situada 3 lugares a la derecha de la A ), la B sería reemplazada por la E, etc.</p>
          <p> - El Cifrado César mueve cada letra un determinado número de espacios en el alfabeto. En este ejemplo se usa un desplazamiento de tres espacios, asi que una B en el texto original se convierte en una E en el texto codificado.</p>
 
-         <!-- Agregar una imagen  
+    <!-- Agregar una imagen  -->
         
-    <p class="img"> <img src="src/img/cifrado.png"></p>
-	</header> -->
-
-	<section>
+   <div> 
+		 <img class="img" src="../src/img/cipher.png" alt="cipher"> </div>
+	
+	</header>
+	<section> 
 
 		<!-- Creación de TextArea-->
 		<div class="area">
